# code_stock

./: .gitignore  README.md  docker-compose.yml  ecosystem.config.js
backend/: .env  .env.example  jest.config.js  jest.integration.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
backend/src/: app.ts
backend/src/config/: index.ts  logger.ts
backend/src/dao/: connection.ts  factory.ts  index.ts  mongo.ts  postgresql.ts  types.ts
backend/src/middleware/: auth.ts  error.ts  validate.ts
backend/src/routes/: auth.ts  portfolio.ts  strategy.ts
backend/src/services/: portfolio.ts  strategy.ts  user.ts
backend/src/websocket/: eastmoney.ts  gate.ts  index.ts  market.ts  okx.ts  server.ts  sina.ts  spread-monitor.ts  tencent.ts  types.ts  yahoo.ts
backend/tests/: setup.ts
backend/tests/unit/: factory.test.ts  (+2 more)
docs/: deploy-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
python-engine/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
python-engine/api/: bridge.py
python-engine/backtest/: engine.py
python-engine/core/: engine.py  event.py  risk.py
python-engine/data/: realtime.py
python-engine/docs/: exchange.md  indicators.md  realtime.md  risk.md
python-engine/examples/: ma_cross.py
python-engine/execution/exchange/: base.py  binance.py  okx.py
python-engine/strategy/: base.py
python-engine/utils/: indicators.py
scripts/: init-postgres.sql  install-mongodb-ubuntu24.sh  install-mongodb.sh
(+34 files in other folders)
